force-app/main/default/objects/Opportunity/fields/ds__c.field-meta.xml
<CustomField>
    <fullName>ds__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>ds</label>
    <length>255</length>
    <type>Text</type>
</CustomField>