force-app/main/default/objects/Opportunity/fields/status__c.field-meta.xml
<CustomField>
    <fullName>status__c</fullName>
    <label>status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>pending</fullName>
                <default>true</default>
                <label>pending</label>
            </value>
            <value>
                <fullName>submitted</fullName>
            </value>
            <value>
                <fullName>approved</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>