force-app/main/default/objects/Opportunity/fields/Time__c.field-meta.xml
<CustomField>
    <fullName>Time__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Time</label>
    <type>DateTime</type>
</CustomField>