force-app/main/default/objects/Opportunity/recordTypes/Ordinary.recordType-meta.xml
<RecordType>
    <fullName>Ordinary</fullName>
    <active>true</active>
    <businessProcess>new</businessProcess>
    <label>Ordinary</label>
</RecordType>