force-app/main/default/objects/Opportunity/recordTypes/Private.recordType-meta.xml
<RecordType>
    <fullName>Private</fullName>
    <active>true</active>
    <businessProcess>Sales Process</businessProcess>
    <label>Private</label>
</RecordType>