force-app/main/default/objects/Opportunity/validationRules/Opp.validationRule-meta.xml
<ValidationRule>
    <fullName>Opp</fullName>
    <active>false</active>
    <errorConditionFormula>MainCompetitors__c = &apos;1111&apos;</errorConditionFormula>
    <errorMessage>errorrrr</errorMessage>
</ValidationRule>